refactor: изменил url адреса к картинке и main.js

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,6 @@
       <canvas id="gameCanvas"></canvas>            
 
     </section>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
